fix dropdown alignment

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -70,6 +70,13 @@
         position: static;
     }
 
+    .Select-value {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: -2px;
+    }
+
     .marker-row {
         tr {
             visibility: hidden !important;
